# esgf-validate

./: README.md  pyproject.toml
src/: validate.py
